long device inventory texts are no longer cut off + visible on hover
Changelog: Title
(cherry picked from commit 959c91199d9de9f90531a416ca5e241051272896)

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1434,6 +1434,11 @@ tr.expand {
   opacity: 1;
 }
 
+.inventory-text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .grouplist div span {
   font-size: 0.9rem;
 }
